[gd_scene load_steps=3 format=2]

[ext_resource path="res://resources/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/ui/menu/MainMenu.gd" type="Script" id=2]

[node name="MainMenu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1275.0
margin_bottom = 715.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1270.0
margin_bottom = 234.0
size_flags_vertical = 3

[node name="OfflineButton" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 612.0
margin_top = 108.0
margin_right = 658.0
margin_bottom = 126.0
text = "Offline"

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 238.0
margin_right = 1270.0
margin_bottom = 472.0
size_flags_vertical = 3

[node name="OnlineButton" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer2"]
margin_left = 614.0
margin_top = 108.0
margin_right = 656.0
margin_bottom = 126.0
text = "Online"

[node name="CenterContainer3" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 476.0
margin_right = 1270.0
margin_bottom = 710.0
size_flags_vertical = 3

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer3"]
margin_left = 610.0
margin_top = 108.0
margin_right = 659.0
margin_bottom = 126.0
text = "Settings"
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/OfflineButton" to="." method="_on_OfflineButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer2/OnlineButton" to="." method="_on_OnlineButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer3/SettingsButton" to="." method="_on_SettingsButton_pressed"]
